<resources>
    <string name="app_name">PhonePlayer</string>
    <string name="app_title">手机助手</string>
    <string name="setting">系统设置</string>
    <string name="refresh">应用更新</string>
    <string name="message">消息</string>
    <string name="uninstall">应用卸载</string>
    <string name="loadmanager">下载管理</string>
    <string name="logout">退出登录</string>
    <string name="logouted">"你已退出登录"</string>
    <string name="phone_name">手机助手</string>
    <string name="search">搜索</string>
    <string name="open">关闭</string>
    <string name="close">打开</string>

    <string name="tab_recommend">推荐</string>
    <string name="tab_category">分类</string>
    <string name="tab_game">游戏</string>
    <string name="tab_ranking">排行</string>
    <string name="tab_home">首页</string>

    <string name="net_error">网络请求失败</string>
    <string name="app_install">安 装</string>
    <string name="guide_text">立即体验</string>
    <string name="net_error_no_me">是网络先动的手不怪我</string>
    <string name="again">重 试</string>

    <string name="hot_app">热门应用</string>
    <string name="hot_game">热门游戏</string>
    <string name="hot_top">热门主题</string>

    <!--<string name="load_more">加载更多...</string>-->
    <string name="no_more_data">我也是有底线的</string>
    <string name="load_to_pull">上拉加载更多</string>
    <string name="load_more">加载中...</string>

    <string name="msisdn">输入手机号码</string>
    <string name="password">输入密码</string>
    <string name="login">登  陆</string>
    <string name="no_login">未登录</string>
    <string name="login_success">登录成功</string>
    <string name="invalid_token">登录信息已失效,请重新登录</string>

    <string name="login_refresh">登录刷新</string>

    <string name="category_good">精品</string>
    <string name="category_top">排行</string>
    <string name="category_new">新品</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="collText">
        曾经有一份真挚的爱情摆在我的面前\n\n
        我没有好好珍惜 直到失去时 才后悔莫及\n\n
        人世间最痛苦的事莫过于此\n\n
        如果上天能够再给我一次机会\n\n
        我会对那个女孩说三个字 我爱你\n\n
        如果非要在这个爱上加个期限\n\n
        我希望是 一万年...\n\n
    </string>
    
    <string name="app_describe">应用描述</string>
    <string name="app_detail">应用详情</string>
    <string name="app_same_dev">应用开发者</string>
    <string name="app_same_app">相关应用</string>


</resources>
