<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.leyifu.phoneplayer.fragment.RankingFragment">

    <LinearLayout
        android:id="@+id/ll_net_error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="100dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_net_errot"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/load_error" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/net_error"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/net_error_no_me" />

        <Button
            android:id="@+id/btn_net_erro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_error_shape"
            android:text="@string/again"
            android:textColor="@color/white" />

    </LinearLayout>
</FrameLayout>
