<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1F1F1"
    android:orientation="vertical"
    tools:context="com.leyifu.phoneplayer.fragment.AppDetailFragment">

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="@color/white"
        android:paddingBottom="10dp"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/ll_screen_shot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal" />

    </HorizontalScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="15dp"
        android:paddingBottom="10dp">

        <TextView
            style="@style/app_detail_title"
            android:text="@string/app_describe" />

        <com.ms.square.android.expandabletextview.ExpandableTextView
            android:id="@+id/ex_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            app:animDuration="200"
            app:maxCollapsedLines="4">

            <TextView
                android:id="@+id/expandable_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/blue_grey_300"
                android:textSize="14sp" />

            <ImageButton
                android:id="@+id/expand_collapse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:layout_gravity="right|bottom"
                android:background="@android:color/transparent" />


        </com.ms.square.android.expandabletextview.ExpandableTextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingBottom="10dp">

        <TextView
            style="@style/app_detail_title"
            android:text="@string/app_detail" />

        <TextView
            android:id="@+id/tv_updata"
            style="@style/app_detail_content"
            android:layout_marginTop="15dp"
            android:text="更新时间:2018-08-08" />

        <TextView
            android:id="@+id/tv_version"
            style="@style/app_detail_content"
            android:layout_marginTop="15dp"
            android:text="最新版本:1.0.1" />

        <TextView
            android:id="@+id/tv_size"
            style="@style/app_detail_content"
            android:layout_marginTop="15dp"
            android:text="应用大小:185M" />

        <TextView
            android:id="@+id/tv_dev"
            style="@style/app_detail_content"
            android:layout_marginTop="15dp"
            android:text="开发者:腾讯" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingBottom="10dp">

        <TextView
            style="@style/app_detail_title"
            android:text="@string/app_same_dev" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_same_dev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="none" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingBottom="10dp">

        <TextView
            style="@style/app_detail_title"
            android:text="@string/app_same_app" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_same_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="none" />

    </LinearLayout>

</LinearLayout>
